Trying with CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="./index_files/css" rel="stylesheet">
     <title>Henry's Personal Site</title>
 </head>
 
@@ -12,6 +14,7 @@
     <p><em>Electrical Engineering student, <strong><a href="https://uwaterloo.ca/electrical-computer-engineering/">University of Waterloo</a></strong></em></p>
 
     <hr>
+
     <a href="contact-me.html">Contact Me</a>
 </body>
 
