Fixed css attachment, added background color and font

--- a/index.html
+++ b/index.html
@@ -3,19 +3,25 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="./index_files/css" rel="stylesheet">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel = "stylesheet" href="./index_files/styles.css">
+    <link href="./index_files/styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Henry's Personal Site</title>
 </head>
 
-<body>
-    <h1>Henry Wu</h1>
-    <p><em>Electrical Engineering student, <strong><a href="https://uwaterloo.ca/electrical-computer-engineering/">University of Waterloo</a></strong></em></p>
-
-    <hr>
-
-    <a href="contact-me.html">Contact Me</a>
-</body>
+<body cz-shortcut-listen = "true">
+    <div class="top-container">
+        <div class="title-text">
+            <h1>Henry Wu</h1>
+            <img class="profile-pic" src="./index_files/20240215_160937.jpg" alt="pic" width="200" height="200">
+        </div>
+    </div><div class="middle-container">
+        <h2><em>Electrical Engineering student, <strong><a href="https://uwaterloo.ca/electrical-computer-engineering/">University of Waterloo</a></strong></em></h2>
+        <a href="contact-me.html">Contact Me</a>
+    </div>
+</body> 
 
 </html>
