Added buttons to linked in and github, adjusted color, and added form at bottom.

--- a/index.html
+++ b/index.html
@@ -9,18 +9,54 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-pzrjaFBRi4j0N0RJtYWrKccA4de8p4As64gzW2c8N+p3xG78Rf7qYikD4/z7h2c0jIQfZfLjj66XJr8HyFz1zg==" crossorigin="anonymous" />
     <title>Henry's Personal Site</title>
 </head>
 
 <body cz-shortcut-listen = "true">
+    <div class="navigation-bar">
+        <div class="links">
+            <ul class="links-list">
+                <li>
+                    <a href="https://www.linkedin.com/in/henry-wu-759697256/" target="_blank" class="linkedin-button">
+                        <div class="icon-container"><img src="./index_files/LinkedIn_icon.svg.png" alt="LinkedIn"></div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/Tann90grin" target="_blank" class="github-button">
+                        <div class="icon-container"><img src="./index_files/GitHub-Mark-ea2971cee799.png" alt="GitHub"></div>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="navigation">
+            <ul class="nav-list">
+                <li>
+
+                </li>
+            </ul>
+        </div>
+    </div>
     <div class="top-container">
         <div class="title-text">
             <h1>Henry Wu</h1>
-            <img class="profile-pic" src="./index_files/20240215_160937.jpg" alt="pic" width="200" height="200">
+            <h3><em>2A Electrical Engineering Student, <strong><a href="https://uwaterloo.ca/electrical-computer-engineering/">University of Waterloo</a></strong></em></h3>
         </div>
-    </div><div class="middle-container">
-        <h2><em>Electrical Engineering student, <strong><a href="https://uwaterloo.ca/electrical-computer-engineering/">University of Waterloo</a></strong></em></h2>
-        <a href="contact-me.html">Contact Me</a>
+    </div>
+    <div class="middle-container">
+        <img class="profile-pic" src="./index_files/20240215_160937.jpg" alt="pic" width="200" height="200">       
+    </div>
+    <div class="bottom-container">
+        <h2>Contact Me</h2>
+        <form class="" action="mailto:h27wu@uwaterloo.ca" method="post" enctype="text/plain">
+            <label>Your Name:</label>
+            <input type="text" name="" value=""><br>
+            <label>Your Email:</label>
+            <input type="email" name="" value=""><br>
+            <label>Your Message:</label><br>
+            <textarea name="name" rows="10" cols="30"></textarea><br>
+            <input type="submit" name="">
+        </form>    
     </div>
 </body> 
 
