Added breaks in intro

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     <div id="about" class="fade-in">
         <!-- Your content for the About section -->
         <h2>About Me</h2>
-        <h3>Hello there! 👋 I'm Henry Wu, a passionate and dedicated 2A Electrical Engineering student at the University of Waterloo. I thrive in the world of technology, with a diverse skill set that encompasses software development, electrical engineering, and innovative problem-solving.</h3>
+        <h3>Hello there! 👋 I'm Henry Wu, a passionate and dedicated 2A Electrical Engineering student at the University of Waterloo.<br>
+            I thrive in the world of technology, with a diverse skill set that encompasses software development, electrical engineering, and innovative problem-solving.</h3>
 
     </div>
 
