--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body cz-shortcut-listen = "true">
+    <script src="./anime-3.2.2/lib/anime.min.js"></script>
     <div class="navigation">
         <div class = "nav-left">
             <a href="https://www.linkedin.com/in/henry-wu-759697256/" target="_blank" class="linkedin-button">
@@ -36,7 +37,7 @@
         <div class="title-text">
             <h1>Henry Wu</h1>
             <img class="profile-pic" src="./index_files/20240215_160937.jpg" alt="pic" width="200" height="200">  
-            <h3><em>2A Electrical Engineering Student, <strong><a href="https://uwaterloo.ca/electrical-computer-engineering/">University of Waterloo</a></strong></em></h3>
+            <h3><em>2B Electrical Engineering Student, <strong><a href="https://uwaterloo.ca/electrical-computer-engineering/">University of Waterloo</a></strong></em></h3>
             <div id="scroll-arrow">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M5 12L12 19L19 12"></path>
@@ -48,7 +49,7 @@
     <div id="about" class="fade-in">
         <!-- Your content for the About section -->
         <h2>About Me</h2>
-        <h3>Hello there! 👋 I'm Henry Wu, a passionate and dedicated 2A Electrical Engineering student at the University of Waterloo. I thrive in the world of technology, with a diverse skill set that encompasses software development, electrical engineering, and innovative problem-solving.</h3>
+        <h3>Hello there! 👋 I'm Henry Wu, a passionate and dedicated 2B Electrical Engineering student at the University of Waterloo. I thrive in the world of technology, with a diverse skill set that encompasses software development, electrical engineering, and innovative problem-solving.</h3>
 
     </div>
 
@@ -90,7 +91,7 @@
                         Hands-on projects in digital circuit design and VHDL programming (using Intel Quartus Prime).
                     </p>
                     <p>
-                    
+            
                         Implemented an HVAC system on an FPGA board. This system monitors and displays the current and desired temperature on a 7-segment display while controlling the air conditioner to achieve the desired room temperature.
                     </p>
                     <p>
