--- a/index.html
+++ b/index.html
@@ -49,8 +49,14 @@
     <div id="about" class="fade-in">
         <!-- Your content for the About section -->
         <h2>About Me</h2>
-        <h3>Hello there! 👋 I'm Henry Wu, a passionate and dedicated 2B Electrical Engineering student at the University of Waterloo. I thrive in the world of technology, with a diverse skill set that encompasses software development, electrical engineering, and innovative problem-solving.</h3>
-
+        <h3><strong>Hello, my name is Henry! 👋 I am a 2B Electrical Engineering student at the University of Waterloo with a passion for tackling complex engineering challenges.</strong></h3>
+        <div class="content-background">
+            <h3>I am proficient in C++, Python, and Java, with strong skills in algorithms, data structures, and project development.</h3>
+            <h3>I have hands-on experience in microarchitecture (ARM/x86), assembly programming, PCB design, and FPGA development with VHDL.</h3>
+            <h3>In past experiences, I have developed embedded drivers, built automated data systems, and optimized manufacturing processes.</h3>
+            <h3>I also work comfortably with Git, Windows/Linux, VSCode/Eclipse, Atlassian suite, CAD tools (Onshape, Altium), and lab equipment(DMM, oscilloscope, logic analyzer, etc.) for debugging and bring-up.</h3>
+        </div>
+        <h3><strong>Nice to meet you!</strong></h3>
     </div>
 
     <div id="projects" class="fade-in">
